# connect-four

./: .cursorignore  .gitignore  PHASE_2_PLAN.md  README.md  env.d.ts  eslint.config.mjs  lint_log.txt  next.config.mjs  open-next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  wrangler.toml
design/: icon.psd
docs/: AI-MATRIX-RESULTS.md  AI-SYSTEM.md  ARCHITECTURE.md  BACKLOG.md  DEPLOYMENT.md  DEVELOPMENT.md  GAME-GUIDE.md  README.md  historical_development.md
e2e/: smoke.spec.ts
public/: sw.js
scripts/: check-diagrams.mjs  deploy.sh  format-ai-matrix-md.cjs  generate-types.sh  reset-local-db.ts  (+2 more)
worker/: Cargo.toml
worker/bindings/: Cell.ts  GameState.ts  GeneticParams.ts  MLDiagnostics.ts  MLMoveEvaluation.ts  MLResponse.ts  MoveEvaluationWasm.ts  Player.ts  WasmBestMoveResponse.ts  WasmHeuristicResponse.ts  WasmMLResponse.ts
worker/rust_ai_core/: Cargo.toml
worker/rust_ai_core/ml/data/weights/: ml_ai_weights_distilled.json
worker/rust_ai_core/src/: features.rs  lib.rs  mcts.rs  ml_ai.rs  neural_network.rs  solver.rs  wasm_api.rs
worker/rust_ai_core/tests/: ai_matrix_test.rs  bindings_test.rs  game_logic_test.rs  ml_performance.rs  ml_vs_minimax.rs  ml_vs_solver.rs
worker/src/: features.rs  genetic_params.rs  lib.rs  main.rs  mcts.rs  ml_ai.rs  neural_network.rs  solver.rs  wasm_api.rs
worker/tests/: README.md  ai_bias_debug.rs  ai_diagnostic.rs  ai_matrix_test.rs  bindings_test.rs  depth_comparison.rs  evaluation_debug.rs  evaluation_test.rs  evolution_debug.rs  genetic_params_comparison.rs  heuristic_debug.rs  minimax_diagnostic.rs  ml_performance.rs  ml_vs_minimax.rs  mm_vs_heuristic_analysis.rs  repro_endgame.rs  simple_game_test.rs  solver_capability.rs  threat_detection_test.rs  vertical_win_debug.rs
(+47 files in other folders)
