[workspace]
resolver = "2"
members = [
    "rust_ai_core"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev]
opt-level = 1
panic = "unwind"
